login/logout, login validation

--- a/LeagueAssistWeb/Content/Site.css
+++ b/LeagueAssistWeb/Content/Site.css
@@ -16,6 +16,12 @@
     white-space: normal;
 }
 
+.error
+{
+    font-weight: bold;
+    color: #ff0000;
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
