--- a/LeagueAssistWeb/Views/Shared/_LoginPartial.cshtml
+++ b/LeagueAssistWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,15 +1,11 @@
 ﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
+@if (Session["MyClub"] != null)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
-    @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Odjava</a></li>
     </ul>
     }
 }
@@ -20,3 +16,16 @@ else
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
+
+$(document).on('click', '.btnConfirm', function(){
+    $.ajax({
+        url: '@Url.Action("LogOff", "Account")',
+        type: 'POST',
+        cache: false,
+        async: true,
+        data: $('form').serialize(),
+        success: function(result){
+        //do something
+        }
+        });
+        });
