--- a/LeagueAssistWeb/Views/Account/Login.cshtml
+++ b/LeagueAssistWeb/Views/Account/Login.cshtml
@@ -5,6 +5,11 @@
 }
 
 <h2>@ViewBag.Title</h2>
+<hr />
+<br />
+
+<span class="error">@TempData["Error"]</span>
+
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
@@ -47,7 +52,3 @@
         </section>
     </div>
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
