--- a/LeagueAssistWeb/Views/Shared/_Layout.cshtml
+++ b/LeagueAssistWeb/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @if (Context.User.Identity.IsAuthenticated)
+                @if (Session["MyClub"] != null)
                 {
                     @Html.ActionLink("LeagueAssist", "Index", "Player", new { area = "" }, new { @class = "navbar-brand" })
                 }
@@ -28,7 +28,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @if (!Context.User.Identity.IsAuthenticated)
+                    @if (Session["MyClub"] != null)
                     {
                         <li>@Html.ActionLink("Početna", "Index", "Player")</li>
                         <li>@Html.ActionLink("O klubu", "Details", "About")</li>
