--- a/LeagueAssistWeb/Views/Match/Index.cshtml
+++ b/LeagueAssistWeb/Views/Match/Index.cshtml
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="control-label col-md-2" align="right"><b>Sezona</b></div>
             <div class="col-md-10" align="left">
-                @Html.DropDownList("sezonaID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.season_Id, ViewBag.sezonaID as List<SelectListItem>, null, htmlAttributes: new { @class = "form-control" })
             </div>
         </div>
         <br />
@@ -69,7 +69,7 @@
                                                 @item.matchDateTime
                                             </td>
                                             <td>
-                                                @item.homeClub
+                                                @item.homeClub.name
                                             </td>
                                             @if (item.homeGoals != null && item.guestGoals != null)
                                             {
@@ -81,7 +81,7 @@
                                                 <td></td>
                                             }
                                             <td>
-                                                @item.guestClub
+                                                @item.guestClub.name
                                             </td>
                                             @if (item.homeGoals != null && item.guestGoals != null)
                                             {
