--- a/LeagueAssistWeb/Views/Player/Index.cshtml
+++ b/LeagueAssistWeb/Views/Player/Index.cshtml
@@ -3,10 +3,7 @@
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
-<form id="form1" action=@Url.Action("Index", new {
-                       sortOrder = ViewBag.CurrentSort, currentNazivFilter = ViewBag.NazivFilter,
-                       currentKraticaFilter = ViewBag.KraticaFilter,
-                       currentErasmusKodFilter = ViewBag.ErasmusKodFilter, currentURLFilter = ViewBag.URLFilter })
+<form id="form1" action=@Url.Action("Index")
       method="get">
 
     @{
