--- a/LeagueAssistWeb/Views/League/Index.cshtml
+++ b/LeagueAssistWeb/Views/League/Index.cshtml
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="control-label col-md-2" align="right"><b>Sezona</b></div>
             <div class="col-md-10" align="left">
-                @Html.DropDownList("sezonaID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("sezonaID", null, htmlAttributes: new { @class = "form-control", @onchange = "" })
             </div>
         </div>
         <br />
