--- a/LeagueAssistWeb/Views/Player/RegisterExistingPlayerSearch.cshtml
+++ b/LeagueAssistWeb/Views/Player/RegisterExistingPlayerSearch.cshtml
@@ -8,82 +8,8 @@
 <hr />
 <br />
 
-@using (Html.BeginForm("SearchPlayers", "Home", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-inline row" }))
+@using (Html.BeginForm("SearchPlayers", "Player", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-inline row" }))
 {
-    <div class="container">
-        <div class="col-sm-offset-1 col-sm-10">
-            <div class="panel panel-default">
-                <div class="col-sm-12 panel-heading clearfix">
-                    <span class="col-sm-3"><b>Filteri</b></span>
-                    <span type="button" data-toggle="collapse" class="glyphicon glyphicon-filter col-sm-9" data-target="#filterBody" align="right" />
-                </div>
-                <div id="filterBody" class="panel-body collapse" style="align-items:center">
-                    <div class="row">
-                        <div class="col-xs-3" align="right">
-                            <br />
-                            <b>Ime:</b>
-                        </div>
-                        <div class="col-sm-2" align="left">
-                            <br />
-                            @Html.TextBox("ImeSearch", ViewBag.ImeSearch as string, new { @class = "form-control" })
-                        </div>
-                        <div class="col-xs-3" align="right">
-                            <br />
-                            <b>Prezime:</b>
-                        </div>
-                        <div class="col-sm-2" align="left">
-                            <br />
-                            @Html.TextBox("PrezimeSearch", ViewBag.PrezimeSearch as string, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-3" align="right">
-                            <br />
-                            <b>Godina rođenja od:</b>
-                        </div>
-                        <div class="col-sm-2" align="left">
-                            <br />
-                            @Html.TextBox("GodinaOdSearch", ViewBag.GodinaOdSearch as string, new { @class = "form-control" })
-                        </div>
-                        <div class="col-xs-3" align="right">
-                            <br />
-                            <b>Godina rođenja do:</b>
-                        </div>
-                        <div class="col-sm-2" align="left">
-                            <br />
-                            @Html.TextBox("GodinaDoSearch", ViewBag.GodinaDoSearch as string, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-3" align="right">
-                            <br />
-                            <b>Ima klub:</b>
-                        </div>
-                        <div class="col-sm-2" align="left">
-                            <br />
-                            @Html.CheckBox("ImaKlubSearch", false, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <br />
-                    <div class="row">
-                        <div class="col-sm-6" align="right">
-                            <br />
-                            <button type="submit" value="Pretraži" class="btn btn-info">
-                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Pretraži
-                            </button>
-                        </div>
-                        <div class="col-sm-5" align="left">
-                            <br />
-                            <input type="button" class="btn btn-danger" value="Odustani" onclick="@("window.location.href='" + @Url.Action("SearchPlayers", "Home") + "'");" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-}
-<hr />
-<br />
 
 <table class="table table-striped">
     <thead>
@@ -120,3 +46,4 @@
         }
     </tbody>
 </table>
+}
