--- a/LeagueAssistWeb/Views/Player/EditPlayer.cshtml
+++ b/LeagueAssistWeb/Views/Player/EditPlayer.cshtml
@@ -48,7 +48,7 @@
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Datum rođenja:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.player.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.player.BirthDate.ToShortDateString(), new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-2" style="border-top: none"></td>
                             <td align="right" class="col-xs-2" style="border-top: none"></td>
@@ -93,11 +93,11 @@
                         <tr>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.DateFrom, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.contract.DateFrom.ToShortDateString(), new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.contract.DateTo, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.contract.DateTo.ToShortDateString(), new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
@@ -138,11 +138,11 @@
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi od:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
                                 @Html.HiddenFor(model => model.healthCheck.Id)
-                                @Html.EditorFor(model => model.healthCheck.FromDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.healthCheck.FromDate.ToShortDateString(), new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="right" class="col-xs-2" style="border-top: none"><b>Vrijedi do:</b></td>
                             <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.healthCheck.ToDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.healthCheck.ToDate.ToShortDateString(), new { htmlAttributes = new { @class = "form-control" } })
                             </td>
                             <td align="left" class="col-xs-4" style="border-top: none"></td>
                         </tr>
