--- a/LeagueAssistWeb/Views/Player/Index.cshtml
+++ b/LeagueAssistWeb/Views/Player/Index.cshtml
@@ -66,7 +66,7 @@
                 </a>
             </div>
             <div class="col-xs-2" align="right">
-                <a href="@Url.Action("RegisterNewPlayer")" class="btn btn-primary">
+                <a href="@Url.Action("RegisterPlayer")" class="btn btn-primary">
                     <span class="glyphicon glyphicon-plus-sign"></span>
                     Registriraj novog igrača
                 </a>
