--- a/LeagueAssistWeb/Views/Player/RegisterExistingPlayer.cshtml
+++ b/LeagueAssistWeb/Views/Player/RegisterExistingPlayer.cshtml
@@ -2,11 +2,25 @@
 
 @{
     ViewBag.Title = "Registriraj igrača";
+    var gr = TempData["Error"];
+    var msgErr = "";
+    if (gr != null)
+    {
+        msgErr = gr.ToString();
+    }
 }
 
 <h2>@ViewBag.Title</h2>
 <hr />
 <br />
+
+@if (!string.IsNullOrWhiteSpace(msgErr))
+{
+    <div class="alert alert-danger alert alert-dismissible" role="alert">
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        @msgErr
+    </div>
+}
 
 @using (Html.BeginForm("EditPlayer", "Player", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
